--- a/gulp/src/include/head.html
+++ b/gulp/src/include/head.html
@@ -1,13 +1,36 @@
-<!doctype html>
-<html lang="zh-cmn-Hans">
+
 <head>
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 	<meta name="format-detection" content="telephone=no, address=no, email=no">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="x5-orientation" content="portrait">
 	<title>@@title</title>
-	<script src="js/comm.js"></script>
+	<script data-psd="750">
+		(function (script) {
+			var document = window.document,
+				docEl = document.documentElement,
+				psd = script ? ~~script.dataset.psd : 750,
+				dpr = 1,
+				scale = 1 / dpr,
+				resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize'
+			var metaEl = document.createElement('meta')
+			metaEl.name = 'viewport'
+			metaEl.content = 'width=device-width, user-scalable=no, initial-scale=' + scale + ', maximum-scale=' + scale + ', minimum-scale=' + scale
+			docEl.firstElementChild.appendChild(metaEl)
+			var recalc = function () {
+				var width = docEl.clientWidth
+				if (width / dpr > psd) {
+					width = psd * dpr
+				}
+				docEl.dataset.width = width
+				docEl.dataset.persent = 100 * (width / psd)
+				docEl.style.fontSize = 100 * (width / psd) + 'px'
+			}
+			recalc()
+			if (!document.addEventListener) return
+			window.addEventListener(resizeEvt, recalc, false)
+		})(document.querySelector('script[data-psd]'))
+	</script>
 	<link href="lib/weui/weui.min.css" rel="stylesheet">
 	<link href="lib/reset/reset.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
